--- a/pom.xml
+++ b/pom.xml
@@ -88,9 +88,9 @@
         <version>${gt-version}</version>
       </dependency>
       <dependency>
-        <groupId>org.jyaml</groupId>
-        <artifactId>jyaml</artifactId>
-        <version>1.3</version>
+        <groupId>com.fasterxml.jackson.dataformat</groupId>
+        <artifactId>jackson-dataformat-yaml</artifactId>
+        <version>2.14.0</version>
       </dependency>
       <!-- transitive dependency -->
       <dependency>
@@ -224,8 +224,8 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>org.jyaml</groupId>
-      <artifactId>jyaml</artifactId>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-yaml</artifactId>
       <scope>compile</scope>
     </dependency>
     <dependency>
