--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         <xalan.version>2.7.0</xalan.version>
         <xercesImpl.version>2.7.1</xercesImpl.version>
         <junit.version>4.7</junit.version>
+        <jackson-dataformat-yaml.version>2.16.1</jackson-dataformat-yaml.version>
     </properties>
 
     <dependencyManagement>
@@ -106,7 +107,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
                 <artifactId>jackson-dataformat-yaml</artifactId>
-                <version>2.16.1</version>
+                <version>${jackson-dataformat-yaml.version}</version>
             </dependency>
             <!-- transitive dependency -->
             <dependency>
