--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.mapfish.print</groupId>
     <artifactId>print-lib</artifactId>
-    <version>2.4.1-SNAPSHOT</version>
+    <version>2.4-c125</version>
 
     <description>
         MapFish Print Version 2 has reached end-of-life and is no longer under active development.
